<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/navigation_movie">

    <fragment
        android:id="@+id/navigation_movie"
        android:name="com.supernova.jetpack.movietron.ui.MovieFragment"
        android:label="@string/movies_title"
        tools:layout="@layout/fragment_movie" />

    <fragment
        android:id="@+id/navigation_tv"
        android:name="com.supernova.jetpack.movietron.ui.TvFragment"
        android:label="@string/tv_shows_title"
        tools:layout="@layout/fragment_tv" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.supernova.jetpack.movietron.ui.FavoriteFragment"
        android:label="@string/favorites_title"
        tools:layout="@layout/fragment_favorite" />

</navigation>