<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_poster_item"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/poster"
            tools:src="@drawable/poster_aquaman"/>

        <TextView
            android:id="@+id/txt_title_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginEnd="32dp"
            android:layout_toEndOf="@id/img_poster_item"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/demo_title" />

        <TextView
            android:id="@+id/txt_release_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_title_item"
            android:layout_toEndOf="@id/img_poster_item"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:textSize="13sp"
            tools:text="@string/demo_release"/>

        <TextView
            android:id="@+id/txt_overview_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_release_item"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:layout_toEndOf="@id/img_poster_item"
            android:ellipsize="end"
            android:maxLines="3"
            tools:text="@string/demo_overview" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>
